[gd_scene load_steps=110 format=3 uid="uid://cbp0gvrwm0nia"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_05/nucleo_cinco_main.gd" id="1_egmq5"]
[ext_resource type="Texture2D" uid="uid://drt6pw27vdmef" path="res://img/nucleo_5/fondo_animado/linea_5_1.png" id="1_ehog6"]
[ext_resource type="Texture2D" uid="uid://bu00a3qyly2ac" path="res://img/nucleo_5/fondo_animado/linea_5_2.png" id="2_una0c"]
[ext_resource type="Texture2D" uid="uid://quiswuvkdchy" path="res://img/nucleo_5/fondo_animado/linea_5_3.png" id="3_vdlph"]
[ext_resource type="Texture2D" uid="uid://c065hnnjnqkfj" path="res://img/nucleo_5/fondo_animado/linea_5_4.png" id="4_ht5yh"]
[ext_resource type="Texture2D" uid="uid://b2da76got7nqd" path="res://img/nucleo_5/fondo_animado/linea_5_5.png" id="5_tdpwj"]
[ext_resource type="Texture2D" uid="uid://idpwv5it6ql5" path="res://img/nucleo_5/fondo_animado/linea_5_6.png" id="6_i43o4"]
[ext_resource type="Texture2D" uid="uid://c7fbdxnvfslw1" path="res://img/nucleo_5/fondo_animado/linea_5_7.png" id="7_3cak5"]
[ext_resource type="Texture2D" uid="uid://x6kxal75aa24" path="res://img/nucleo_5/fondo_animado/linea_5_8.png" id="8_kbmxm"]
[ext_resource type="Texture2D" uid="uid://bal5c12r8iyft" path="res://img/nucleo_5/fondo_animado/linea_5_9.png" id="9_v80ag"]
[ext_resource type="Texture2D" uid="uid://3d0ji5ead54f" path="res://img/nucleo_5/fondo_animado/linea_5_10.png" id="10_dn4ki"]
[ext_resource type="Texture2D" uid="uid://nabbc5lmgp53" path="res://img/nucleo_5/fondo_animado/linea_5_11.png" id="11_o03fr"]
[ext_resource type="Texture2D" uid="uid://ymwdigaj66ec" path="res://img/nucleo_5/fondo_animado/linea_5_12.png" id="12_ylai2"]
[ext_resource type="Texture2D" uid="uid://dsowyy2q8m5hn" path="res://img/nucleo_5/fondo_animado/linea_5_13.png" id="13_0xvdv"]
[ext_resource type="Texture2D" uid="uid://dfbu73roro0nl" path="res://img/nucleo_5/fondo_animado/linea_5_14.png" id="14_s3wv5"]
[ext_resource type="Texture2D" uid="uid://cdonkt65b3l6i" path="res://img/nucleo_5/fondo_animado/linea_5_15.png" id="15_4x8yw"]
[ext_resource type="Texture2D" uid="uid://dfea35ugv7o7k" path="res://img/nucleo_5/fondo_animado/linea_5_16.png" id="16_j5m3f"]
[ext_resource type="Texture2D" uid="uid://cnbvxs2k7s6s" path="res://img/nucleo_5/fondo_animado/linea_5_17.png" id="17_ufk6j"]
[ext_resource type="Texture2D" uid="uid://bnpi3i17ngycr" path="res://img/nucleo_5/fondo_animado/linea_5_18.png" id="18_vv746"]
[ext_resource type="Texture2D" uid="uid://bcaixgebcsf6d" path="res://img/nucleo_5/fondo_animado/linea_5_19.png" id="19_2ixa4"]
[ext_resource type="Texture2D" uid="uid://b8hprcwwf58sq" path="res://img/nucleo_5/fondo_animado/linea_5_20.png" id="20_o1huv"]
[ext_resource type="Texture2D" uid="uid://bqj4xvht0b1xu" path="res://img/nucleo_5/fondo_animado/linea_5_21.png" id="21_n1eth"]
[ext_resource type="Texture2D" uid="uid://csu7bbr6vh2xi" path="res://img/nucleo_5/fondo_animado/linea_5_22.png" id="22_j3dwt"]
[ext_resource type="Texture2D" uid="uid://e2rsd27yy3rb" path="res://img/nucleo_5/fondo_animado/linea_5_23.png" id="23_0hxsw"]
[ext_resource type="Texture2D" uid="uid://xgwk4bf5avce" path="res://img/nucleo_5/fondo_animado/linea_5_24.png" id="24_xwi30"]
[ext_resource type="Texture2D" uid="uid://bu08oj6fmjnx3" path="res://img/nucleo_5/fondo_animado/linea_5_25.png" id="25_se6qd"]
[ext_resource type="Texture2D" uid="uid://cxssjbsvr8sok" path="res://img/nucleo_5/fondo_animado/linea_5_26.png" id="26_o8cdp"]
[ext_resource type="Texture2D" uid="uid://cixl1f42jb4po" path="res://img/nucleo_5/fondo_animado/linea_5_27.png" id="27_4hppi"]
[ext_resource type="Texture2D" uid="uid://b102s2y1674dp" path="res://img/nucleo_5/fondo_animado/linea_5_28.png" id="28_5lsra"]
[ext_resource type="Texture2D" uid="uid://nru5cx14tgbi" path="res://img/nucleo_5/fondo_animado/linea_5_29.png" id="29_x1gmp"]
[ext_resource type="Texture2D" uid="uid://dipkpcdbkvi0p" path="res://img/nucleo_5/fondo_animado/linea_5_30.png" id="30_bcvok"]
[ext_resource type="Texture2D" uid="uid://c1q4rekrc8ff2" path="res://img/nucleo_5/fondo_animado/linea_5_31.png" id="31_r7u76"]
[ext_resource type="Texture2D" uid="uid://dcifem2h1l1r2" path="res://img/nucleo_5/fondo_animado/linea_5_32.png" id="32_6hkxv"]
[ext_resource type="Texture2D" uid="uid://blufk00d7imlm" path="res://img/nucleo_5/fondo_animado/linea_5_33.png" id="33_d0lug"]
[ext_resource type="Texture2D" uid="uid://y2hy0bvdfp8u" path="res://img/nucleo_5/fondo_animado/linea_5_34.png" id="34_pdfi5"]
[ext_resource type="Texture2D" uid="uid://dvhq7dr4gw8hb" path="res://img/nucleo_5/fondo_animado/linea_5_35.png" id="35_nu52b"]
[ext_resource type="Texture2D" uid="uid://jk1mqjkdcgsa" path="res://img/nucleo_5/fondo_animado/linea_5_36.png" id="36_7kbux"]
[ext_resource type="Texture2D" uid="uid://ceb6w6kpandhg" path="res://img/nucleo_5/fondo_animado/linea_5_37.png" id="37_0lijo"]
[ext_resource type="Texture2D" uid="uid://d2xdarqqa0lr4" path="res://img/nucleo_5/fondo_animado/linea_5_38.png" id="38_0sjan"]
[ext_resource type="Texture2D" uid="uid://ctofik3si0o5" path="res://img/nucleo_5/fondo_animado/linea_5_39.png" id="39_fyacd"]
[ext_resource type="Texture2D" uid="uid://dliiqsew5j777" path="res://img/nucleo_5/fondo_animado/linea_5_40.png" id="40_fv8hg"]
[ext_resource type="Texture2D" uid="uid://boyp58kxd74vv" path="res://img/nucleo_5/fondo_animado/linea_5_41.png" id="41_budkl"]
[ext_resource type="Texture2D" uid="uid://dqjglb0wdw4y8" path="res://img/nucleo_5/fondo_animado/linea_5_42.png" id="42_be1i6"]
[ext_resource type="Texture2D" uid="uid://dfonenlmjk8r2" path="res://img/nucleo_5/fondo_animado/linea_5_43.png" id="43_udcc1"]
[ext_resource type="Texture2D" uid="uid://lhmiwbx8q73m" path="res://img/nucleo_5/fondo_animado/linea_5_44.png" id="44_35l7o"]
[ext_resource type="Texture2D" uid="uid://b7pfsftumbnnj" path="res://img/nucleo_5/fondo_animado/linea_5_45.png" id="45_prrfq"]
[ext_resource type="Texture2D" uid="uid://b77xq1irsm4a5" path="res://img/nucleo_5/fondo_animado/linea_5_46.png" id="46_1abk7"]
[ext_resource type="Texture2D" uid="uid://cgtongdkd1dff" path="res://img/nucleo_5/fondo_animado/linea_5_47.png" id="47_kpemx"]
[ext_resource type="Texture2D" uid="uid://dtkpd47lih3t1" path="res://img/nucleo_5/fondo_animado/linea_5_48.png" id="48_d1ogd"]
[ext_resource type="Texture2D" uid="uid://1b7ve2mgayar" path="res://img/nucleo_5/fondo_animado/linea_5_49.png" id="49_st26w"]
[ext_resource type="Texture2D" uid="uid://brrbk4g55rprr" path="res://img/nucleo_5/fondo_animado/linea_5_50.png" id="50_ir0h7"]
[ext_resource type="Texture2D" uid="uid://c4icbdbnwij0d" path="res://img/nucleo_5/fondo_animado/linea_5_51.png" id="51_gvqqj"]
[ext_resource type="Texture2D" uid="uid://86cqewd5mtbh" path="res://img/nucleo_5/fondo_animado/linea_5_52.png" id="52_ksn8w"]
[ext_resource type="Texture2D" uid="uid://p5bd4bqc4rp7" path="res://img/nucleo_5/fondo_animado/linea_5_53.png" id="53_xmopi"]
[ext_resource type="Texture2D" uid="uid://dcb110qsv4bw2" path="res://img/nucleo_5/fondo_animado/linea_5_54.png" id="54_l4ljv"]
[ext_resource type="Texture2D" uid="uid://y72gh1265sfi" path="res://img/nucleo_5/fondo_animado/linea_5_55.png" id="55_rifbk"]
[ext_resource type="Texture2D" uid="uid://c1hyxj7io6h5p" path="res://img/nucleo_5/fondo_animado/linea_5_56.png" id="56_7sxy3"]
[ext_resource type="Texture2D" uid="uid://pp1pqdd8saj2" path="res://img/nucleo_5/fondo_animado/linea_5_57.png" id="57_dx0xp"]
[ext_resource type="Texture2D" uid="uid://dtq0nkh55q0ft" path="res://img/nucleo_5/fondo_animado/linea_5_58.png" id="58_t3l6r"]
[ext_resource type="Texture2D" uid="uid://c0qqy66ihttt0" path="res://img/nucleo_5/fondo_animado/linea_5_59.png" id="59_8530m"]
[ext_resource type="Texture2D" uid="uid://ufgm764gu4wd" path="res://img/nucleo_5/fondo_animado/linea_5_60.png" id="60_kqd7g"]
[ext_resource type="Texture2D" uid="uid://ca14ct6ltnr4k" path="res://img/nucleo_5/fondo_animado/linea_5_61.png" id="61_w5dqa"]
[ext_resource type="Texture2D" uid="uid://bablbqymnu23r" path="res://img/nucleo_5/fondo_animado/linea_5_62.png" id="62_06kdo"]
[ext_resource type="Texture2D" uid="uid://b6ph51ty51v8r" path="res://img/nucleo_5/fondo_animado/linea_5_63.png" id="63_80vuc"]
[ext_resource type="Texture2D" uid="uid://dbrs0bwpj13cf" path="res://img/nucleo_5/fondo_animado/linea_5_64.png" id="64_hmfrq"]
[ext_resource type="Texture2D" uid="uid://b0138g8ojrc4" path="res://img/nucleo_5/fondo_animado/linea_5_65.png" id="65_s2tvw"]
[ext_resource type="Texture2D" uid="uid://d3x01ernvi67l" path="res://img/nucleo_5/fondo_animado/linea_5_66.png" id="66_7r03b"]
[ext_resource type="Texture2D" uid="uid://7xq1p0clnede" path="res://img/nucleo_5/fondo_animado/linea_5_67.png" id="67_0n1j2"]
[ext_resource type="Texture2D" uid="uid://bsrfqik2xmqya" path="res://img/nucleo_5/fondo_animado/linea_5_68.png" id="68_up0hy"]
[ext_resource type="Texture2D" uid="uid://1lovy610xjyp" path="res://img/nucleo_5/fondo_animado/linea_5_69.png" id="69_cncpx"]
[ext_resource type="Texture2D" uid="uid://d2byqg85seskh" path="res://img/nucleo_5/fondo_animado/linea_5_70.png" id="70_rbdb6"]
[ext_resource type="Texture2D" uid="uid://yptayf8fo1sq" path="res://img/nucleo_5/fondo_animado/linea_5_71.png" id="71_lltub"]
[ext_resource type="Texture2D" uid="uid://c5xci4yd7lap6" path="res://img/nucleo_5/fondo_animado/linea_5_72.png" id="72_t3cid"]
[ext_resource type="Texture2D" uid="uid://c7f8x2r08qpcb" path="res://img/nucleo_5/fondo_animado/linea_5_73.png" id="73_gjw0g"]
[ext_resource type="Texture2D" uid="uid://kanoq0a30u1e" path="res://img/nucleo_5/fondo_animado/linea_5_74.png" id="74_tgo5k"]
[ext_resource type="Texture2D" uid="uid://by5onkugsppy1" path="res://img/nucleo_5/fondo_animado/linea_5_75.png" id="75_xgwd4"]
[ext_resource type="Texture2D" uid="uid://desfgdolqjun1" path="res://img/nucleo_5/fondo_animado/linea_5_76.png" id="76_qrxr0"]
[ext_resource type="Texture2D" uid="uid://cns06q1mtodii" path="res://img/nucleo_5/fondo_animado/linea_5_77.png" id="77_c6gub"]
[ext_resource type="Texture2D" uid="uid://bw3tjxh5eihli" path="res://img/nucleo_5/fondo_animado/linea_5_78.png" id="78_ogsed"]
[ext_resource type="Texture2D" uid="uid://dmv3g72vuksx4" path="res://img/nucleo_5/fondo_animado/linea_5_79.png" id="79_mu0db"]
[ext_resource type="Texture2D" uid="uid://d0lqyswq72qdr" path="res://img/nucleo_5/fondo_animado/linea_5_80.png" id="80_uy14s"]
[ext_resource type="Texture2D" uid="uid://ccdeui5swxb74" path="res://img/nucleo_5/fondo_animado/linea_5_81.png" id="81_g4o3k"]
[ext_resource type="Texture2D" uid="uid://k1nqevsstwro" path="res://img/nucleo_5/fondo_animado/linea_5_82.png" id="82_0whov"]
[ext_resource type="Texture2D" uid="uid://cp7icyfvox6b7" path="res://img/nucleo_5/fondo_animado/linea_5_83.png" id="83_nawob"]
[ext_resource type="Texture2D" uid="uid://dwqmytmpk845a" path="res://img/nucleo_5/fondo_animado/linea_5_84.png" id="84_guufu"]
[ext_resource type="Texture2D" uid="uid://18jfg50fvb17" path="res://img/nucleo_5/fondo_animado/linea_5_85.png" id="85_fki3o"]
[ext_resource type="Texture2D" uid="uid://6i2xyq5dx1cg" path="res://img/nucleo_5/fondo_animado/linea_5_86.png" id="86_n7f65"]
[ext_resource type="Texture2D" uid="uid://b7mghlg3844c1" path="res://img/nucleo_5/fondo_animado/linea_5_87.png" id="87_bociy"]
[ext_resource type="Texture2D" uid="uid://bxa51e1owmafp" path="res://img/nucleo_5/fondo_animado/linea_5_88.png" id="88_hubgq"]
[ext_resource type="Texture2D" uid="uid://drrx8bp2qkp4k" path="res://img/nucleo_5/fondo_animado/linea_5_89.png" id="89_wnt25"]
[ext_resource type="Texture2D" uid="uid://d0c4welknl5r4" path="res://img/nucleo_5/fondo_animado/linea_5_90.png" id="90_m1dge"]
[ext_resource type="Texture2D" uid="uid://dt60i72sv17lt" path="res://img/nucleo_5/inicio/atendiendo_linea_5_00.png" id="91_a8jw7"]
[ext_resource type="Texture2D" uid="uid://dxcofcta68ueq" path="res://img/nucleo_5/inicio/atendiendo_linea_5_01.png" id="92_she42"]
[ext_resource type="Texture2D" uid="uid://d3pm0o517gp6a" path="res://img/nucleo_5/inicio/atendiendo_linea_5_02.png" id="93_ldtx7"]
[ext_resource type="Texture2D" uid="uid://bpr4fsupl7jb" path="res://img/nucleo_5/inicio/atendiendo_linea_5_03.png" id="94_u11cn"]
[ext_resource type="Texture2D" uid="uid://dwbgcsrkjs4vb" path="res://img/nucleo_5/inicio/recibiendo_5_01.png" id="95_8sh4k"]
[ext_resource type="Texture2D" uid="uid://cpc6ioaku2ped" path="res://img/nucleo_5/inicio/recibiendo_5_02.png" id="96_f6twb"]
[ext_resource type="Texture2D" uid="uid://572dp2oedlfd" path="res://img/nucleo_5/inicio/recibiendo_5_03.png" id="97_uatgf"]
[ext_resource type="Texture2D" uid="uid://1yvsrvqbi4wb" path="res://img/nucleo_5/inicio/recibiendo_5_04.png" id="98_hdbeu"]
[ext_resource type="PackedScene" uid="uid://csmeaxa4g6wmb" path="res://scenes/dibujar.tscn" id="99_jr7gj"]
[ext_resource type="Texture2D" uid="uid://dcgo0ypns5rqo" path="res://img/nucleo_5/botones/dibujar.png" id="101_8jkga"]
[ext_resource type="Texture2D" uid="uid://litmn7ergq1r" path="res://img/nucleo_5/botones/final.png" id="101_8mkd6"]
[ext_resource type="Texture2D" uid="uid://verhaamanxj0" path="res://img/nucleo_5/botones/prompt_1.png" id="102_pxvq0"]
[ext_resource type="Texture2D" uid="uid://di05kpbnsiuqw" path="res://img/nucleo_5/botones/prompt_3.png" id="103_hn7lv"]
[ext_resource type="Texture2D" uid="uid://c7vri54vnpsi0" path="res://img/nucleo_5/botones/prompt_2.png" id="104_dt8wr"]
[ext_resource type="Texture2D" uid="uid://bp1ibv0sppj0q" path="res://img/nucleo_5/botones/info_final.png" id="106_03o0f"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="107_hw64u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0n2ve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ehog6")
}, {
"duration": 1.0,
"texture": ExtResource("2_una0c")
}, {
"duration": 1.0,
"texture": ExtResource("3_vdlph")
}, {
"duration": 1.0,
"texture": ExtResource("4_ht5yh")
}, {
"duration": 1.0,
"texture": ExtResource("5_tdpwj")
}, {
"duration": 1.0,
"texture": ExtResource("6_i43o4")
}, {
"duration": 1.0,
"texture": ExtResource("7_3cak5")
}, {
"duration": 1.0,
"texture": ExtResource("8_kbmxm")
}, {
"duration": 1.0,
"texture": ExtResource("9_v80ag")
}, {
"duration": 1.0,
"texture": ExtResource("10_dn4ki")
}, {
"duration": 1.0,
"texture": ExtResource("11_o03fr")
}, {
"duration": 1.0,
"texture": ExtResource("12_ylai2")
}, {
"duration": 1.0,
"texture": ExtResource("13_0xvdv")
}, {
"duration": 1.0,
"texture": ExtResource("14_s3wv5")
}, {
"duration": 1.0,
"texture": ExtResource("15_4x8yw")
}, {
"duration": 1.0,
"texture": ExtResource("16_j5m3f")
}, {
"duration": 1.0,
"texture": ExtResource("17_ufk6j")
}, {
"duration": 1.0,
"texture": ExtResource("18_vv746")
}, {
"duration": 1.0,
"texture": ExtResource("19_2ixa4")
}, {
"duration": 1.0,
"texture": ExtResource("20_o1huv")
}, {
"duration": 1.0,
"texture": ExtResource("21_n1eth")
}, {
"duration": 1.0,
"texture": ExtResource("22_j3dwt")
}, {
"duration": 1.0,
"texture": ExtResource("23_0hxsw")
}, {
"duration": 1.0,
"texture": ExtResource("24_xwi30")
}, {
"duration": 1.0,
"texture": ExtResource("25_se6qd")
}, {
"duration": 1.0,
"texture": ExtResource("26_o8cdp")
}, {
"duration": 1.0,
"texture": ExtResource("27_4hppi")
}, {
"duration": 1.0,
"texture": ExtResource("28_5lsra")
}, {
"duration": 1.0,
"texture": ExtResource("29_x1gmp")
}, {
"duration": 1.0,
"texture": ExtResource("30_bcvok")
}, {
"duration": 1.0,
"texture": ExtResource("31_r7u76")
}, {
"duration": 1.0,
"texture": ExtResource("32_6hkxv")
}, {
"duration": 1.0,
"texture": ExtResource("33_d0lug")
}, {
"duration": 1.0,
"texture": ExtResource("34_pdfi5")
}, {
"duration": 1.0,
"texture": ExtResource("35_nu52b")
}, {
"duration": 1.0,
"texture": ExtResource("36_7kbux")
}, {
"duration": 1.0,
"texture": ExtResource("37_0lijo")
}, {
"duration": 1.0,
"texture": ExtResource("38_0sjan")
}, {
"duration": 1.0,
"texture": ExtResource("39_fyacd")
}, {
"duration": 1.0,
"texture": ExtResource("40_fv8hg")
}, {
"duration": 1.0,
"texture": ExtResource("41_budkl")
}, {
"duration": 1.0,
"texture": ExtResource("42_be1i6")
}, {
"duration": 1.0,
"texture": ExtResource("43_udcc1")
}, {
"duration": 1.0,
"texture": ExtResource("44_35l7o")
}, {
"duration": 1.0,
"texture": ExtResource("45_prrfq")
}, {
"duration": 1.0,
"texture": ExtResource("46_1abk7")
}, {
"duration": 1.0,
"texture": ExtResource("47_kpemx")
}, {
"duration": 1.0,
"texture": ExtResource("48_d1ogd")
}, {
"duration": 1.0,
"texture": ExtResource("49_st26w")
}, {
"duration": 1.0,
"texture": ExtResource("50_ir0h7")
}, {
"duration": 1.0,
"texture": ExtResource("51_gvqqj")
}, {
"duration": 1.0,
"texture": ExtResource("52_ksn8w")
}, {
"duration": 1.0,
"texture": ExtResource("53_xmopi")
}, {
"duration": 1.0,
"texture": ExtResource("54_l4ljv")
}, {
"duration": 1.0,
"texture": ExtResource("55_rifbk")
}, {
"duration": 1.0,
"texture": ExtResource("56_7sxy3")
}, {
"duration": 1.0,
"texture": ExtResource("57_dx0xp")
}, {
"duration": 1.0,
"texture": ExtResource("58_t3l6r")
}, {
"duration": 1.0,
"texture": ExtResource("59_8530m")
}, {
"duration": 1.0,
"texture": ExtResource("60_kqd7g")
}, {
"duration": 1.0,
"texture": ExtResource("61_w5dqa")
}, {
"duration": 1.0,
"texture": ExtResource("62_06kdo")
}, {
"duration": 1.0,
"texture": ExtResource("63_80vuc")
}, {
"duration": 1.0,
"texture": ExtResource("64_hmfrq")
}, {
"duration": 1.0,
"texture": ExtResource("65_s2tvw")
}, {
"duration": 1.0,
"texture": ExtResource("66_7r03b")
}, {
"duration": 1.0,
"texture": ExtResource("67_0n1j2")
}, {
"duration": 1.0,
"texture": ExtResource("68_up0hy")
}, {
"duration": 1.0,
"texture": ExtResource("69_cncpx")
}, {
"duration": 1.0,
"texture": ExtResource("70_rbdb6")
}, {
"duration": 1.0,
"texture": ExtResource("71_lltub")
}, {
"duration": 1.0,
"texture": ExtResource("72_t3cid")
}, {
"duration": 1.0,
"texture": ExtResource("73_gjw0g")
}, {
"duration": 1.0,
"texture": ExtResource("74_tgo5k")
}, {
"duration": 1.0,
"texture": ExtResource("75_xgwd4")
}, {
"duration": 1.0,
"texture": ExtResource("76_qrxr0")
}, {
"duration": 1.0,
"texture": ExtResource("77_c6gub")
}, {
"duration": 1.0,
"texture": ExtResource("78_ogsed")
}, {
"duration": 1.0,
"texture": ExtResource("79_mu0db")
}, {
"duration": 1.0,
"texture": ExtResource("80_uy14s")
}, {
"duration": 1.0,
"texture": ExtResource("81_g4o3k")
}, {
"duration": 1.0,
"texture": ExtResource("82_0whov")
}, {
"duration": 1.0,
"texture": ExtResource("83_nawob")
}, {
"duration": 1.0,
"texture": ExtResource("84_guufu")
}, {
"duration": 1.0,
"texture": ExtResource("85_fki3o")
}, {
"duration": 1.0,
"texture": ExtResource("86_n7f65")
}, {
"duration": 1.0,
"texture": ExtResource("87_bociy")
}, {
"duration": 1.0,
"texture": ExtResource("88_hubgq")
}, {
"duration": 1.0,
"texture": ExtResource("89_wnt25")
}, {
"duration": 1.0,
"texture": ExtResource("90_m1dge")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yj3nv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("91_a8jw7")
}, {
"duration": 1.0,
"texture": ExtResource("92_she42")
}, {
"duration": 1.0,
"texture": ExtResource("93_ldtx7")
}, {
"duration": 1.0,
"texture": ExtResource("94_u11cn")
}],
"loop": false,
"name": &"atendiendo",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("95_8sh4k")
}, {
"duration": 1.0,
"texture": ExtResource("96_f6twb")
}, {
"duration": 1.0,
"texture": ExtResource("97_uatgf")
}, {
"duration": 1.0,
"texture": ExtResource("98_hdbeu")
}],
"loop": true,
"name": &"recibiendo",
"speed": 5.0
}]

[node name="NucleoCinco" type="Node2D"]
script = ExtResource("1_egmq5")

[node name="BackgroundAnimado" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0.262932, 0.262932, 0.262932, 1)
scale = Vector2(3.55556, 2)
sprite_frames = SubResource("SpriteFrames_0n2ve")
frame_progress = 0.266611
centered = false

[node name="Inicio" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yj3nv")
animation = &"recibiendo"
centered = false

[node name="PromptUno" type="Node2D" parent="."]
visible = false

[node name="DibujarUno" parent="PromptUno" instance=ExtResource("99_jr7gj")]
color = Color(1, 0.239216, 0, 1)
imagen_arriba = ExtResource("101_8jkga")
imagen_abajo = ExtResource("102_pxvq0")
texto = "Un Perro"

[node name="PromptDos" type="Node2D" parent="."]
visible = false

[node name="DibujarDos" parent="PromptDos" instance=ExtResource("99_jr7gj")]
color = Color(1, 0.239216, 0, 1)
imagen_arriba = ExtResource("101_8jkga")
imagen_abajo = ExtResource("104_dt8wr")
texto = "Un perro animado"

[node name="PromptTres" type="Node2D" parent="."]
visible = false

[node name="DibujarTres" parent="PromptTres" instance=ExtResource("99_jr7gj")]
color = Color(1, 0.239216, 0, 1)
imagen_arriba = ExtResource("101_8jkga")
imagen_abajo = ExtResource("103_hn7lv")
texto = "Un perro animado con un corazon en la cabeza"

[node name="Final" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("101_8mkd6")
centered = false

[node name="Info" type="Sprite2D" parent="Final"]
position = Vector2(561, 395)
texture = ExtResource("106_03o0f")
centered = false

[node name="BotonS" parent="Final" instance=ExtResource("107_hw64u")]
offset_left = 879.0
offset_top = 612.0
offset_right = 1007.0
offset_bottom = 657.0
color = Color(1, 0.239216, 0, 1)
texto = "ENVIAR"

[connection signal="animation_finished" from="Inicio" to="." method="_on_inicio_animation_finished"]
[connection signal="actividad_finalizada" from="PromptUno/DibujarUno" to="." method="_on_dibujar_uno_actividad_finalizada"]
[connection signal="actividad_finalizada" from="PromptDos/DibujarDos" to="." method="_on_dibujar_dos_actividad_finalizada"]
[connection signal="actividad_finalizada" from="PromptTres/DibujarTres" to="." method="_on_dibujar_tres_actividad_finalizada"]
[connection signal="pressed" from="Final/BotonS" to="." method="_on_boton_s_pressed"]
